--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -2,18 +2,33 @@
   width: 100vw;
   border-bottom: 0.5px solid grey;
   padding: 10px 10px 0px;
-
+  font-size: 14px;
+  line-height: 30px;
   overflow-x: scroll;
+  text-align: center;
+  background-color: #F5F8FA;
 
-  >div {
+  > div {
     width: max-content;
     display: flex;
     gap: 10px;
   }
 
   .navItems {
-    padding: 10px;
+    padding: 8px 2px;
     cursor: pointer;
+
+    .navContent {
+      padding: 2px 8px;
+      border-radius: 8px;
+    }
+
+    &:hover {
+      .navContent {
+        background-color: rgba($color: grey, $alpha: 0.1);
+        max-height: max-content;
+      }
+    }
 
     &.activeTab {
       border-bottom: 2px solid orange;
