--- a/components/Repos/Repos.module.scss
+++ b/components/Repos/Repos.module.scss
@@ -3,14 +3,14 @@
 
   .filters {
     border-bottom: 0.5px solid grey;
-    padding: 20px 0px;
+    padding: 16px 0px;
     display: flex;
     gap: 10px;
 
     > div {
       display: flex;
       gap: 10px;
-      min-width: 45%;
+      width: -webkit-fill-available;
 
       @media (max-width: 1000px) {
         min-width: 35%;
@@ -19,15 +19,25 @@
 
     .newButtonMweb {
       display: none;
-      background-color: green;
-      padding: 10px 20px;
+      background-color: #1a7f37;
+      color: #fff;
+      padding: 5px 16px;
       border-radius: 8px;
       border: 0px;
       cursor: pointer;
+      font-size: 14px;
       width: 100%;
       margin-bottom: 10px;
+      line-height: 20px;
+
+      svg {
+        margin-bottom: -4px;
+        fill: #ffffffcc;
+      }
+
       @media (max-width: 800px) {
         display: block;
+        margin-bottom: 24px;
       }
     }
 
@@ -43,6 +53,18 @@
 
     input {
       width: -webkit-fill-available;
+      padding: 5px 12px;
+      font-size: 14px;
+      line-height: 20px;
+      vertical-align: middle;
+      background-color: #fff;
+      background-repeat: no-repeat;
+      background-position: right 8px center;
+      border: 1px solid var(--secondary-color);
+      border-radius: 6px;
+      box-shadow: var(--shadow-inset, var(--color-primer-shadow-inset));
+      transition: 80ms cubic-bezier(0.33, 1, 0.68, 1);
+      transition-property: color, background-color, box-shadow, border-color;
     }
 
     @media (max-width: 800px) {
@@ -57,11 +79,20 @@
   .starButton {
     display: flex;
     gap: 10px;
-    border: 1px solid grey;
+    border: 0.25px solid var(--secondary-color);
     border-radius: 4px;
     height: max-content;
-    padding: 5px;
+    padding: 3px 6px 3px 12px;
+    font-size: 12px;
     cursor: pointer;
+    background: #f6f8fa;
+    line-height: 20px;
+
+    span {
+      border-left: 0.25px solid var(--secondary-color);
+      padding-left: 6px;
+      padding-top: 2px;
+    }
   }
 
   .resultWrapper {
@@ -70,10 +101,14 @@
       justify-content: space-between;
       padding: 10px 0px;
       border-bottom: 0.5px solid grey;
+      font-size: 14px;
+      line-height: 1.5;
+      gap: 16px;
 
       span {
         color: grey;
         cursor: pointer;
+        width: 160px;
       }
     }
 
@@ -81,7 +116,7 @@
       display: flex;
       justify-content: space-between;
       border-bottom: 0.5px solid grey;
-      padding: 15px 0px;
+      padding: 24px 0px;
       width: 100%;
 
       .leftSection {
@@ -96,7 +131,8 @@
 
         .name {
           display: flex;
-          color: #2f81f7;
+          color: #0969da;
+          line-height: 1.5;
           font-size: 20px;
           font-weight: 700;
           font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -104,14 +140,19 @@
             "Segoe UI Emoji";
           padding-bottom: 10px;
 
+          a:hover {
+            text-decoration: underline;
+          }
+
           span {
             font-size: 12px;
-            border: 1px solid grey;
+            border: 0.25px solid var(--secondary-color);
             border-radius: 16px;
             height: max-content;
-            margin: auto 0px auto 20px;
-            padding: 5px;
-            color: grey;
+            margin: auto 0px auto 8px;
+            padding: 0px 7px;
+            color: var(--secondary-color);
+            font-weight: 500;
           }
         }
 
@@ -120,12 +161,14 @@
           min-width: 100%;
           justify-content: space-between;
           gap: 10px;
+          max-width: 500px;
 
           .starButton {
             margin-left: auto;
-            min-width: 71px;
+            font-size: 12px;
+            min-width: 92px;
 
-            @media(min-width: 850px) {
+            @media (min-width: 850px) {
               display: none;
             }
           }
@@ -133,6 +176,21 @@
 
         .details {
           margin-top: 10px;
+          font-size: 12px;
+          color: var(--secondary-color);
+
+          .pr16 {
+            margin-right: 16px;
+          }
+
+          .dot {
+            height: 12px;
+            width: 12px;
+          }
+
+          svg {
+            margin-bottom: -1px;
+          }
         }
       }
 
