--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,13 +1,24 @@
-.wrapper {
+.mainWrapper {
+  background-color: #fff;
+  color: #1f2328;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji" !important;
+  min-height: 100vh;
+    
+  .wrapper {
     display: flex;
-    padding: 10px 20px;
-    gap: 10px;
+    gap: 23px;
+    max-width: 1280px;
+    margin: 8px auto;
+    padding: 0px 32px;
 
     @media (max-width: 800px) {
-        display: block;
+      display: block;
+      padding: 0px 16px;
     }
 
     .noData {
-        margin-top: 30px;
+      margin-top: 30px;
     }
+  }
 }
