--- a/components/Select/Select.module.scss
+++ b/components/Select/Select.module.scss
@@ -19,15 +19,17 @@
   }
 
   .overlay {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background-color: rgba($color: grey, $alpha: 0.6);
-    display: flex;
-    justify-content: center;
-    z-index: 9999;
+    @media (max-width: 800px) {
+      width: 100vw;
+      height: 100vh;
+      position: fixed;
+      left: 0;
+      top: 0;
+      background-color: rgba($color: grey, $alpha: 0.6);
+      display: flex;
+      justify-content: center;
+      z-index: 9999;
+    }
   }
 
   .optionsWrapper {
@@ -77,7 +79,7 @@
       overflow-y: scroll;
       font-size: 14px;
 
-      >div {
+      > div {
         padding: 16px;
       }
     }
